fix(planner): disable horizontal scrolling on mobile

--- a/src/app/features/planner/planner-plan-view/planner-plan-view.component.scss
+++ b/src/app/features/planner/planner-plan-view/planner-plan-view.component.scss
@@ -5,6 +5,10 @@
   display: flex;
   height: 100%;
 
+  @include mq(xs, max) {
+    overflow-x: hidden;
+  }
+
   &.isScrolled {
     border-top: 1px solid var(--extra-border-color);
   }
